Tue Jun 13 17:37:00 BST 2000 Olly Betts

	* Added get_wdf() method to PostList

	* Tweaked MultiPostList::get_weight()

	* Added OM_MOP_PHRASE (not yet implemented)

Tue Jun 13 17:24:22 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added script to generate an HTML version of the TODO list.

Tue Jun 13 16:49:13 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The scripting wrappers can now make queries with operations
	  other than OR and AND.

	* OM_MOP_NEAR added to the list of operations available.

Tue Jun 13 16:47:47 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stopped includetest from importing the header files in bindings/java

Tue Jun 13 15:03:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add detection of SWIG to the configure script.  Don't attempt to
	  build SWIG stuff if swig isn't available.

Tue Jun 13 14:53:51 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* First cleanup of the java stuff.

Tue Jun 13 14:31:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add include path to common/Makefile.am.  Whoops.

Tue Jun 13 14:31:00 BST 2000 Olly Betts

	* Factored out code to build optimal AND and OR trees into separate
	  methods

Tue Jun 13 14:22:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added the java stuff to the bindings.  Needs some work to get it
	  nicely integrated.

Tue Jun 13 13:07:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made multiexpand1 slightly more rigourous.

Tue Jun 13 12:44:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API change: renamed OmExpandOptions::use_query_terms() to
	  OmExpandOptions::set_use_query_terms().  This is to be consistent
	  with OmMatchOptions' naming scheme.

	* API addition: added OmExpandOptions::use_exact_termfreq() to
	  allow disabling of termfreq approximation in ExpandWeight.

	* Update apitest to test API addition - enabled "multiexpand1": now