@@ -1,3 +1,8 @@
+Tue Jun 13 18:04:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added OmEnquire::get_matching_terms() and OmMatchOptions to
+	  SWIG bindings.
+
 Tue Jun 13 17:37:00 BST 2000 Olly Betts
 
 	* Added get_wdf() method to PostList
